fix tooltip transparency using z-index

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -9,6 +9,7 @@
   /* color: white; */
   background: white;
   font-family: Helvetica, Arial, sans-serif;
+  margin: auto;
 }
 
 header {
