--- a/css/tooltip.css
+++ b/css/tooltip.css
@@ -3,13 +3,11 @@
   opacity: 1;
 }
 
-
 [data-tooltip]:before,
 [data-tooltip]:after {
   display: none;
   position: absolute;
   top: 0;
-  opacity: 1;
 }
 
 [data-tooltip]:before {
@@ -20,14 +18,13 @@
   content: "";
   left: 20px;
   margin-top: 1em;
-  opacity: 1;
 }
 
 [data-tooltip]:after {
   background-color: #0099ff;
-  background-color: rgba(0,153,255, 1);
+  /* background-color: rgba(0,153,255, 1); */
   border: 4px solid #0099ff;
-  border: 4px solid rgba(0,153,255, 1);
+  /* border: 4px solid rgba(0,153,255, 1); */
   border-radius: 7px;
   color: #ffffff;
   content: attr(data-tooltip-label);
@@ -36,13 +33,10 @@
   padding: 5px 15px;
   white-space: pre-wrap;
   width: 300px;
-  opacity: 1;
+  z-index: 1;
 }
 
 [data-tooltip]:hover:after,
 [data-tooltip]:hover:before {
   display: block;
-  opacity: 1;
 }
-  
-/* content: attr(data-tooltip-label) ":\A" attr(data-tooltip-message); */
